--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div id="container">
+            <h1>Hello World!</h1>
+        </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
