more button testing

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <div id="container">
-            <h1>Hello World!</h1>
+            <h1>Welcome to Regis's Frontend Test Site</h1>
         </div>
-
+        <div id="button-div">
+            <button id="photo-button">Test Button</button>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
