second button configuring

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1>Welcome to Regis's Frontend Test Site</h1>
         </div>
         <div id="button-div">
-            <button id="photo-button">Test Button</button>
+            <button id="test-button">Test Button</button>
         </div>
         <script src="script.js"></script>
     </body>
